# virtual-try-on

./: .dockerignore  .gitignore  README.md  deploy.yaml  pyproject.toml
docker/: .dockerignore  Dockerfile  build.sh  create.sh
src/: app.py
src/pipeline/: transformerhacked_garmnet.py  transformerhacked_tryon.py  unet_block_hacked_garmnet.py  unet_block_hacked_tryon.py  unet_hacked_garmnet.py  unet_hacked_tryon.py
src/preprocess/humanparsing/: run_parsing.py
src/preprocess/openpose/: run_openpose.py
src/preprocess/openpose/annotator/openpose/: __init__.py  body.py
